--- a/Config/steamvr_ue_editor_app.json
+++ b/Config/steamvr_ue_editor_app.json
@@ -2,7 +2,7 @@
 	"source": "UE",
 	"applications": [
 		{
-			"app_key": "application.generated.ue.redsleighdown-17735300.ue4editor.exe",
+			"app_key": "application.generated.ue.first-person-bp-game-template-17735300.ue4editor.exe",
 			"launch_type": "url",
 			"url": "steam://launch/",
 			"action_manifest_path": "D:/unreal engine levels/.MajorGameRelatedProjects/UnrealEngine/Red Sleigh Down/RedSleighDown/Config/SteamVRBindings/steamvr_manifest.json",
@@ -10,7 +10,7 @@
 			{
 				"en_us":
 				{
-					"name": "RedSleighDown-17735300 [UE Editor]"
+					"name": "First Person BP Game Template-17735300 [UE Editor]"
 				}
 			}
 		}
