SnowFall and snow

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,3 +32,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[/Script/Engine.RendererSettings]
+r.VirtualTextures=True
+
